--- a/templates/login.html
+++ b/templates/login.html
@@ -7,9 +7,9 @@
 <body>
     <h1>Log-In!</h1>
     <form method="POST">
-        <label for="username"></label>
+        <label for="username">Username: </label>
         <input type="text" id="username" name="username">
-        <label for="email"></label>
+        <label for="email">Email: </label>
         <input type="text" id="email" name="email">
         <input type="submit" value="Submit">
     </form>
