--- a/templates/choose_meal.html
+++ b/templates/choose_meal.html
@@ -13,6 +13,7 @@
         <input type="submit" value="Submit">
     </form>
 
-    <a href="{{ url_for('login') }}">Login</a>
+    <a href="{{ url_for('dashboard') }}">Back to Dashboard</a><br>
+    <a href="{{ url_for('logout') }}">Log Out</a>
 </body>
 </html>
