--- a/templates/select_foods.html
+++ b/templates/select_foods.html
@@ -17,7 +17,8 @@
         {% endfor %}
     <input type="submit" value="Log Selected Foods">
     </form>
-    <a href="{{ url_for('login') }}">Login</a>
+    <a href="{{ url_for('dashboard') }}">Back to Dashboard</a><br>
+    <a href="{{ url_for('logout') }}">Log Out</a>
 </body>
 </html>
 
