--- a/templates/set_goals.html
+++ b/templates/set_goals.html
@@ -18,7 +18,8 @@
         
         <input type="submit" value="Set Goal">
     </form>
-    <a href="{{ url_for('login') }}">Login</a>
+    <a href="{{ url_for('dashboard') }}">Back to Dashboard</a><br>
+    <a href="{{ url_for('logout') }}">Log Out</a>
 </body>
 </html>
 
