Add multithreaded scraping. Add passwords to registration and log-in. Placeholder index.html (landing page) and placeholder style for log-in and register.

--- a/templates/choose_meal.html
+++ b/templates/choose_meal.html
@@ -7,9 +7,9 @@
 <body>
     <h1>Choose a meal type!</h1>
     <form method="POST">
-        <label><input type="radio" name="meal" value="breakfast"> Breakfast</input></label>
-        <label><input type="radio" name="meal" value="lunch"> Lunch</input></label>
-        <label><input type="radio" name="meal" value="dinner"> Dinner</input></label>
+        <label><input type="radio" name="meal" value="breakfast" required> Breakfast</input></label>
+        <label><input type="radio" name="meal" value="lunch" required> Lunch</input></label>
+        <label><input type="radio" name="meal" value="dinner" required> Dinner</input></label>
         <input type="submit" value="Submit">
     </form>
 
