--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -39,7 +39,7 @@
     <a href="{{ url_for('choose_meal') }}">Log Food</a><br>
     <a href="{{ url_for('set_goals') }}">Set Macro Goals</a><br>
     <a href="{{ url_for('view_logs') }}">View Food Logs</a><br>
-    <a href="{{ url_for('logout') }}">Log Out</a>
+    <a href="{{ url_for('home') }}">Log Out</a>
     
 </body>
 </html>
