Add nav bar and slight html changes. Require macro goals to be set after registering

--- a/templates/set_goals.html
+++ b/templates/set_goals.html
@@ -8,13 +8,13 @@
     <h1>Set Your Macro Goals!</h1>
     <form method="POST">
         <label>Calorie Goal: </label>
-        <input type="number" name="calorie_goal"> cal<br>
+        <input type="number" name="calorie_goal" required> cal<br>
         <label>Protein Goal: </label>
-        <input type="number" name="protein_goal">g<br>
+        <input type="number" name="protein_goal" required>g<br>
         <label>Carb Goal: </label>
-        <input type="number" name="carb_goal">g<br>
+        <input type="number" name="carb_goal" required>g<br>
         <label>Fat Goal: </label>
-        <input type="number" name="fat_goal">g<br>
+        <input type="number" name="fat_goal" required>g<br>
         
         <input type="submit" value="Set Goal">
     </form>
