Stores dining_hall selection in session so 'select_dining_hall' is only hit once (on first use)

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -31,7 +31,7 @@
 <div class="container py-5">
 
     <h1 class="mb-4 text-center">
-        Menu – {{ session["dining_hall"] }}
+        Menu - {{ session["dining_hall"] }} for {{ meal.capitalize() }}
     </h1>
 
     <form method="POST">
