--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -43,6 +43,44 @@
             </div>
         </div>
 
+        <!-- Daily Food Logs -->
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-8">
+                <h3 class="text-center mb-4">Foods Logged Today</h3>
+                {% if daily_foods %}
+                    <table class="table table-striped bg-white shadow-sm rounded">
+                        <thead>
+                            <tr>
+                                <th scope="col">Food</th>
+                                <th scope="col">Servings</th>
+                                <th scope="col">Calories</th>
+                                <th scope="col">Protein</th>
+                                <th scope="col">Carbs</th>
+                                <th scope="col">Fat</th>
+                                <th scope="col">Meal</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for food in daily_foods %}
+                                <tr>
+                                    <td>{{ food.name }}</td>
+                                    <td>{{ food.servings }}</td>
+                                    <td>{{ food.calories }}</td>
+                                    <td>{{ food.protein }}</td>
+                                    <td>{{ food.carbs }}</td>
+                                    <td>{{ food.fat }}</td>
+                                    <td>{{ food.meal }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                {% else %}
+                    <p class="text-center text-muted fst-italic">No foods logged today.</p>
+                {% endif %}
+            </div>
+        </div>
+
+
         <div class="row justify-content-center mt-5">
             <div class="col-md-6 text-center">
                 <a href="{{ url_for('menu') }}" class="btn btn-primary btn-lg mb-3">Log Food</a>
