--- a/templates/menu.html
+++ b/templates/menu.html
@@ -31,7 +31,7 @@
 <div class="container py-5">
 
     <h1 class="mb-4 text-center">
-        Menu - {{ session["dining_hall"] }} for {{ meal.capitalize() }}
+        Menu - {{ session["dining_hall"] }} for {{ meal.capitalize() }} on {{ date }}
     </h1>
     <form method="POST">
         <label for="dining-hall">Change dining hall:</label>
@@ -41,10 +41,13 @@
             <option value="Yahentamitsi Dining Hall">Yahentamitsi</option>
             <option value="251 North">251 North</option>
         </select>
+
+        <label for="date">Change date:</label>
+        <input type="date" name="date">
     
         <div class="text-center">
-            <button type="submit" name="change-dining-hall" value = "change-dining-hall" class="btn btn-primary btn-lg">
-                Change Dining Hall
+            <button type="submit" name="change-menu" value="change-menu" class="btn btn-primary btn-lg">
+                Change Menu
             </button>
         </div>
     </form>
