Allow user to change meal time (breakfast, lunch, dinner)

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -45,6 +45,15 @@
         <label for="date">Change date:</label>
         <input type="date" name="date">
     
+        <label for="meal-type">Change meal time:</label>
+        <select name="meal-type">
+            <option value="Placeholder">--Select--</option>
+            <option value="breakfast">Breakfast</option>
+            <option value="brunch">Brunch</option>
+            <option value="lunch">Lunch</option>
+            <option value="dinner">Dinner</option>
+        </select>
+
         <div class="text-center">
             <button type="submit" name="change-menu" value="change-menu" class="btn btn-primary btn-lg">
                 Change Menu
