--- a/templates/select_dining_hall.html
+++ b/templates/select_dining_hall.html
@@ -46,7 +46,7 @@
     <div class="container-fluid">
         <div class="row">
             <!-- Main Content -->
-            <div class="col-md-9 col-lg-10 d-flex align-items-center justify-content-center py-5">
+            <div class="d-flex align-items-center justify-content-center py-5">
                 <form method="POST" class="w-100" style="max-width: 400px;">
                     <h1 class="mb-5 text-center">Choose a dining hall</h1>
 
