--- a/templates/index.html
+++ b/templates/index.html
@@ -32,8 +32,8 @@
         <p class="text-lg text-gray-200 mb-8">Log meals, set goals, and stay in control of your nutrition while dining at the University of Maryland.</p>
         <div class="flex justify-center gap-4">
           
-          <a class="bg-red-600 text-white px-6 py-3 rounded-lg text-lg font-medium hover:bg-red-700 transition">Login</a> <!-- WITHOUT HREF FOR NOW (useless button)-->
-          <a class="bg-red-600 text-white px-6 py-3 rounded-lg text-lg font-medium hover:bg-red-700 transition">Register</a> <!-- WITHOUT HREF FOR NOW (useless button)-->
+          <a href="{{ url_for('login') }}" class="bg-red-600 text-white px-6 py-3 rounded-lg text-lg font-medium hover:bg-red-700 transition">Login</a> 
+          <a href="{{ url_for('register') }}" class="bg-red-600 text-white px-6 py-3 rounded-lg text-lg font-medium hover:bg-red-700 transition">Register</a> 
           <a href="{{ url_for('continue_as_guest') }}" class="text-red-700 px-6 py-3 rounded-lg text-lg font-medium hover:bg-red-100 border border-red-600 transition">Continue as Guest</a>
         </div>
       </div>
