Show serving_size on menu and food logs

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -119,6 +119,8 @@
                                         <label for="food_{{ food.id }}" class="fw-bold mb-1">
                                             {{ food.name }}
                                         </label>
+                                        
+                                        <a>| {{ food.serving_size }}</a>
 
                                         <div class="small text-muted mb-2">
                                             Protein: {{ food.protein }}g |
