--- a/templates/view_logs.html
+++ b/templates/view_logs.html
@@ -66,8 +66,9 @@
                                 <p class="card-text small text-muted">
                                     {{ food.meal.capitalize() }}
                                 </p>
+
                                 <p class="card-text small text-muted">
-                                    {{ food.calories }} cal &bull; {{ food.protein }}g protein &bull; {{ food.carbs }}g carbs &bull; {{ food.fat }}g fat
+                                    {{ food.serving_size }} &bull; {{ food.calories }} cal &bull; {{ food.protein }}g protein &bull; {{ food.carbs }}g carbs &bull; {{ food.fat }}g fat
                                 </p>
 
                                 <div class="mb-3">
