--- a/templates/menu.html
+++ b/templates/menu.html
@@ -76,6 +76,11 @@
         <ul>
             <li><a href="{{ url_for('dashboard')}}">Dashboard</a></li>
             <li><a href="{{ url_for('view_logs')}}">View Logs</a></li>
+            {% if session.get('user_id') %}
+                <li><a href="{{ url_for('logout')}}">Log Out</a></li>
+            {% else %}
+                <li><a href="{{ url_for('login')}}">Sign-In</a></li>
+            {% endif %}
         </ul>
     </nav>
 <div class="container py-5">
