--- a/templates/view_logs.html
+++ b/templates/view_logs.html
@@ -46,8 +46,14 @@
 <body>
     <nav>
         <ul>
+            <li><a href="{{ url_for('home')}}">TerpEats</a></li>
             <li><a href="{{ url_for('dashboard')}}">Dashboard</a></li>
             <li><a href="{{ url_for('view_logs')}}">View Logs</a></li>
+            {% if session.get('user_id') %}
+                <li><a href="{{ url_for('logout')}}">Log Out</a></li>
+            {% else %}
+                <li><a href="{{ url_for('login')}}">Sign-In</a></li>
+            {% endif %}
         </ul>
     </nav>
 <div class="container-fluid">
